# CplusplusAdvanced

CplusplusAdvanced/: README.md
CplusplusAdvanced/C++Advanced/: C++Advanced.sln
CplusplusAdvanced/C++Advanced/C++Advanced Exercise 1/: Bankrekening.cpp  Bankrekening.h  C++ Advanced Exercise 1.cpp  C++Advanced Exercise 1.vcxproj  C++Advanced Exercise 1.vcxproj.filters  Transactie.cpp  Transactie.h
CplusplusAdvanced/C++Advanced/C++Advanced Exercise 10/: Block.cpp  Block.h  C++Advanced Exercise 10.vcxproj  C++Advanced Exercise 10.vcxproj.filters  Child.cpp  Child.h  Parent.cpp  Parent.h  main.cpp
CplusplusAdvanced/C++Advanced/C++Advanced Exercise 2/: C++Advanced Exercise 2.cpp  C++Advanced Exercise 2.vcxproj  C++Advanced Exercise 2.vcxproj.filters  Component.h  Decorator.h  Elf.cpp  Elf.h  Farmer.h  Orc.cpp  Orc.h  Shaman.h  Soldier.h
CplusplusAdvanced/C++Advanced/C++Advanced Exercise 3/: C++Advanced Exercise 3.cpp  C++Advanced Exercise 3.vcxproj  C++Advanced Exercise 3.vcxproj.filters  Docent.cpp  Docent.h  Module.cpp  Module.h  Student.cpp  Student.h
CplusplusAdvanced/C++Advanced/C++Advanced Exercise 6/: C++Advanced Exercise 6.cpp  C++Advanced Exercise 6.vcxproj  C++Advanced Exercise 6.vcxproj.filters  CMakeLists.txt
CplusplusAdvanced/C++Advanced/C++Advanced Exercise 6/Debug/: c++advanced exercise 6.obj.enc  vc141.idb
CplusplusAdvanced/C++Advanced/C++Advanced Exercise 6/Debug/C++Advan.94F9E842.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+110 files in other folders)
